--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/montserrat": "^5.0.18",
     "@mui/material": "^5.16.7",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.0",
     "normalize.css": "^8.0.1",
